fixed font on goals page, aligned <th> elements to center

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,9 @@ nav{
     padding: 10px;
     margin: -7px;
 }
+hr{
+    margin: 7px, auto;
+}
 #headshot{
     border-radius: 50%;
     width: 200px;
@@ -24,6 +27,7 @@ nav{
 }
 th{
     font-family: 'Open Sans', sans-serif;
+    text-align: center;
 }
 p{
     font-family: Inter, sans-serif;
